# lexis

./: .clang-format  .gitignore  CMakeLists.txt  Lexis.qrc  Lexis.rc  README.md  build.sh  qtquickcontrols2.conf
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
android/: AndroidManifest.xml
data/: README.md
docs/: README.md  architecture.md
docs/uml/: component.puml  data_model_class.puml  gui_class.puml  new_item.puml  open_item.puml  play_pronunciation.puml  web_class.puml
scripts/: generate_embedding_db.py  generate_embeddings_db.py  generate_frequency_db.py  requirements.txt
src/: app_manager.cpp  app_manager.hpp  app_settings.cpp  app_settings.hpp  file_downloader.cpp  file_downloader.hpp  main.cpp  utils.cpp  utils.hpp  web_service.cpp  web_service.hpp
src/db/: frequency_lookup.cpp  frequency_lookup.hpp  library.cpp  library.hpp  library_archive.cpp  library_archive.hpp  library_group_organizer.cpp  library_group_organizer.hpp  library_group_suggestion.cpp  library_group_suggestion.hpp  library_item.cpp  library_item.hpp  library_item_model.cpp  library_item_model.hpp  library_search.cpp  library_search.hpp  library_section.cpp  library_section.hpp  library_statistics.cpp  library_statistics.hpp  schema_migration.cpp  schema_migration.hpp  section_type.cpp  section_type.hpp  text_similarity.cpp  text_similarity.hpp
src/db/include/: library.hpp
src/dict/: completer.cpp  dictionary.cpp  predictor.cpp
src/dict/include/: completer.hpp  dictionary.hpp  predictor.hpp
src/gui/: completer.cpp  dialog.cpp  dialog.hpp  drag_drop_image.cpp  drag_drop_image.hpp  grid_item.cpp  grid_item.hpp  icon.cpp  icon.hpp  image.cpp  image.hpp  image_picker.cpp  lexis_dialog.cpp  library_view.cpp  library_view.hpp  main.cpp  new_lexis_dialog.cpp  new_library_item_dialog.cpp  new_library_item_dialog.hpp  ok_cancel_box.cpp  pronunciation_player.cpp  start_page.cpp  start_page.hpp  visualiser.cpp  word_card.cpp  word_card.hpp
src/gui/include/: completer.hpp  icon.hpp  image.hpp  image_picker.hpp  lexis_dialog.hpp  new_lexis_dialog.hpp  new_library_item_dialog.hpp  ok_cancel_box.hpp  pronunciation_player.hpp  start_page.hpp  visualiser.hpp  word_card.hpp
src/include/: utils.hpp  web_service.hpp
src/lang/: completer.cpp  dictionary.cpp  dictionary.hpp  predictor.cpp  predictor.hpp  pronunciation.cpp  pronunciation.hpp  pronunciation_service.cpp  web_service.cpp
src/lang/include/: completer.hpp  dictionary.hpp  predictor.hpp  pronunciation_service.hpp
src/ml/: embedding_lookup.cpp  embedding_lookup.hpp  text_embedding.cpp  text_embedding.hpp
src/model/: library_item.cpp  library_item.hpp  library_item_model.cpp  library_item_model.hpp  library_item_proxy_model.cpp  library_item_proxy_model.hpp  library_section.cpp  library_section.hpp  section_type.cpp  section_type.hpp  tree_item.cpp  tree_item.hpp  tree_model.cpp  tree_model.hpp
src/qml/: ButtonsBox.qml  CategoryPieChart.qml  DeleteDialog.qml  DeleteLanguageDialog.qml  DuplicateItemDialog.qml  DuplicateWordConfirmDialog.qml  HelpDialog.qml  Icon.qml  ImagePicker.qml  ImageWithEffect.qml  InfoLine.qml  InputDialog.qml  InterfaceLanguage.qml  InterfaceLanguageDialog.qml  ItemView.qml  LexisBox.qml  LibraryItemConfiguration.qml  LibrarySectionView.qml  LibraryView.qml  Main.qml  MoveDialog.qml  NetworkErrorScreen.qml  NewLanguageDialog.qml  NewLibraryItem.qml  OkCancel.qml  OrganizeGroupsDialog.qml  PrettyButton.qml  PrettyLabel.qml  QuizView.qml  RoundImage.qml  SearchView.qml  SectionItem.qml  SectionItemMenu.qml  SectionView.qml  SelectLanguageDialog.qml  SideBar.qml  SortPrincipleDialog.qml  SortRoleDialog.qml  StartPage.qml  StatisticsDialog.qml  (+6 more)
src/web/: dictionary.cpp  dictionary.hpp  dictionary_summary.cpp  dictionary_summary.hpp  predictor.cpp  predictor.hpp  pronunciation.cpp  pronunciation.hpp  web_service.cpp  web_service.hpp
tests/: test_dictionary_cache.cpp  test_dictionary_summary.cpp  test_embedding_lookup.cpp  test_frequency_lookup.cpp  test_library_archive.cpp  test_library_group_organizer.cpp  test_library_group_suggestion.cpp  test_library_search.cpp  test_library_statistics.cpp  test_predictor.cpp  test_schema_migration.cpp
tr/: Lexis_ru.ts
